Add github3.py pip package to README and converge.yml

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,5 +2,10 @@
 - name: Converge
   hosts: all
 
+  pre_tasks:
+    - name: Install github3.py python package.
+      ansible.builtin.pip:
+        name: github3.py
+
   roles:
     - role: iancleary.gh
