--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -10,6 +10,7 @@
   become: true
   ansible.builtin.apt:
     name: git
+    update_cache: yes
 
 - name: Install Github CLI deb from github (Specific Version)
   become: true
