--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,6 +3,10 @@
   hosts: all
 
   pre_tasks:
+    - name: Update apt cache. (Deb)
+      ansible.builtin.apt: update_cache=yes cache_valid_time=600
+      when: ansible_os_family == 'Debian'
+
     - name: Install github3.py python package.
       ansible.builtin.pip:
         name: github3.py
